--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
